# benchmark.healthbench

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.py  context_seeking_consensus_hard_104.jsonl  db.py  db.sql  entities.py  executor.py  grader.py  main.py  pyproject.toml  results_browser.py  rollout.py  utils.py  validation.py  worst_at_k.py
.art/healthbench/models/2026-03-25_qwen3-8b_context-seeking-consensus-sft-thinking_overfit-v1/checkpoints/0268/: adapter_config.json  adapter_model.safetensors
docs/: benchmark_results_schema.md
models/: __init__.py  anthropic.py  openai.py  qwen.py
run/: example_model_scores.model_columns_first.tsv  example_model_scores.tsv  main.all.sqlite3  main.all.worst_at_k.csv  same_question_comparison.only_us_full_score.csv  same_question_comparison.only_us_full_score.txt  same_question_comparison.shellfish.csv
