[project]
name = "benchmark-health-bench"
version = "0.1.0"
description = "HealthBench inference benchmark runner"
requires-python = "==3.12.12"
dependencies = [
    "anthropic>=0.84.0",
    "boto3>=1.40.59",
    "click>=8.1.7",
    "httpx>=0.28.1",
    "modal>=1.3.5",
    "openai",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
